--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,7 @@
 html,
 body {
+  background: #131516;
+  color: #e8e6e3;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
@@ -20,7 +22,7 @@ main {
 }
 
 code {
-  background: #fafafa;
+  background: #202324;
   border-radius: 5px;
   padding: 0.75rem;
   font-family: Menlo, Monaco, Lucida Console, Courier New, monospace;
@@ -32,4 +34,8 @@ code {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+li {
+  padding-bottom: 15px;
 }
